dioxus, rubik-scramble: implement preferences on Android, too
Go via the 'preferences' crate, rather than implementing this manually.
But keep the web version unchanged, the preferences.rs way would be
async in the browser and that complexity is not needed here.

--- a/dioxus/rubik-scramble/Cargo.toml
+++ b/dioxus/rubik-scramble/Cargo.toml
@@ -17,13 +17,17 @@ features = []
 [dependencies.web-sys]
 version = "0.3.83"
 optional = true
-features =["Storage"]
+features = ["Storage"]
+
+[dependencies.preferences]
+version = "2.0.0"
+optional = true
 
 [features]
 default = ["web"]
 web = ["dioxus/web", "getrandom/wasm_js", "web-sys"]
 desktop = ["dioxus/desktop"]
-mobile = ["dioxus/mobile"]
+mobile = ["dioxus/mobile", "preferences"]
 
 [build-dependencies]
 kewb = "0.4.3"
