--- a/dioxus/rubik-scramble/Makefile
+++ b/dioxus/rubik-scramble/Makefile
@@ -1,6 +1,9 @@
 run:
 	dx serve
 
+run-android:
+	ANDROID_HOME=~/Android/Sdk/ ANDROID_NDK_HOME=~/Android/Sdk/ndk/current/ dx serve --platform android
+
 install:
 	rm -rf target/dx/rubik-scramble/release/web/public/
 	dx build --release
