--- a/pushping/Cargo.toml
+++ b/pushping/Cargo.toml
@@ -5,11 +5,11 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.98"
-chrono = "0.4.41"
 gethostname = "1.0.2"
 home = "0.5.11"
 isahc = "1.7.2"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+time = { version = "0.3.37", features = ["formatting", "local-offset", "macros"] }
 toml = "0.9.0"
 vfs = "0.12.1"
